--- a/src/index.html
+++ b/src/index.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.css">
-    <script src="scripts/main.js" defer></script>
-  </head>
-  <body>
-
-    <ul class="tree">
-      <li>Fruit
+<head>
+  <meta charset="UTF-8">
+  <title>Title</title>
+  <link rel="stylesheet" href="./styles/main.css">
+  <script src="scripts/main.js" defer></script>
+</head>
+<body>
+<ul id="tree" class="tree">
+  <li>Fruit
+    <ul>
+      <li>Red
         <ul>
-          <li>Red
-            <ul>
-              <li>Cherry</li>
-              <li>Strawberry</li>
-              <li>Watermelon</li>
-              <li>Pomegranate</li>
-            </ul>
-          </li>
-          <li>Yellow
-            <ul>
-              <li>Banana</li>
-              <li>Pineapple</li>
-              <li>Mango</li>
-            </ul>
-          </li>
+          <li>Cherry</li>
+          <li>Strawberry</li>
+          <li>Watermelon</li>
+          <li>Pomegranate</li>
         </ul>
       </li>
-      <li>Fish
+      <li>Yellow
         <ul>
-          <li>Ocean fishes
-            <ul>
-              <li>Blue Marlin</li>
-              <li>Sailfish</li>
-              <li>Dorado</li>
-            </ul>
-          </li>
-          <li>Freshwater fish
-            <ul>
-              <li>Oscar</li>
-              <li>Mollies</li>
-              <li>Goldfish</li>
-            </ul>
-          </li>
+          <li>Banana</li>
+          <li>Pineapple</li>
+          <li>Mango</li>
         </ul>
       </li>
     </ul>
+  </li>
+  <li>Fish
+    <ul>
+      <li>Ocean fishes
+        <ul>
+          <li>Blue Marlin</li>
+          <li>Sailfish</li>
+          <li>Dorado</li>
+        </ul>
+      </li>
+      <li>Freshwater fish
+        <ul>
+          <li>Oscar</li>
+          <li>Mollies</li>
+          <li>Goldfish</li>
+        </ul>
+      </li>
+    </ul>
+  </li>
+</ul>
 
-  </body>
+</body>
 </html>
